<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="+62"/>

            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:textSize="24sp"
                android:inputType="number"
                android:digits="0123456789"/>
        </LinearLayout>

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            android:textSize="24sp"
            android:inputType="number"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You must verify your phone number to secure your account"/>

        <Button
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_start_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_phone_auth"/>

        <Button
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"/>

        <Button
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone_auth"/>

        <Button
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_change_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_phone_number"/>

        <Button
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:id="@+id/button_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_phone_auth"/>

    </LinearLayout>

</LinearLayout>
