<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context=".ui.registration.setup.SetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_margin_large"
            android:layout_marginRight="@dimen/activity_margin_large"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_company"/>

            <Button
                android:id="@+id/btn_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_the_company"/>

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_out"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-100dp"
        android:adjustViewBounds="true"
        android:alpha="0.1"
        android:contentDescription="@string/logo"
        android:src="@drawable/img_login" />

</RelativeLayout>
