<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.account.AccountFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/fragment_more_placeholder" />

            <include layout="@layout/fragment_more_placeholder" />

            <include layout="@layout/fragment_more_placeholder" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_border"
        android:padding="12dp">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_border"
        android:padding="12dp">

        <TextView
            android:id="@+id/label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_email" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_border"
        android:padding="12dp">

        <TextView
            android:id="@+id/label_referral_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/referral_code" />

        <TextView
            android:id="@+id/referral_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_referral_code" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/verify_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_border"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:src="@drawable/ic_smartphone_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Verify Phone Number"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:paddingStart="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_border"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:src="@drawable/ic_power" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Signout"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawableRight="@drawable/ic_chevron_right"
            android:paddingLeft="12dp"
            android:paddingStart="12dp" />

    </LinearLayout>

</LinearLayout>
