<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.employee.EmployeeProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_employees"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:maxWidth="100dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:padding="12dp">

                <TextView
                    android:id="@+id/label_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_name" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:padding="12dp">

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_email" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:padding="12dp">

                <TextView
                    android:id="@+id/label_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/base_salary" />

                <TextView
                    android:id="@+id/base_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_salary" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_promote_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:orientation="horizontal"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:src="@drawable/ic_medal" />

                <TextView
                    android:id="@+id/promote_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="Promote Admin"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:drawableEnd="@drawable/ic_chevron_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_salary_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:src="@drawable/ic_salary" />

                <TextView
                    android:id="@+id/salary_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:text="Monthly Salary"
                    android:paddingLeft="12dp"
                    android:paddingStart="12dp"
                    android:drawableEnd="@drawable/ic_chevron_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:orientation="horizontal"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:src="@drawable/ic_edit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:paddingLeft="12dp"
                    android:paddingStart="12dp"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:drawableEnd="@drawable/ic_chevron_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:text="@string/delete" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_activate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/set_border"
                android:clickable="true"
                android:visibility="gone"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="12dp"
                android:orientation="horizontal"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="20dp"
                    android:maxWidth="20dp"
                    android:src="@drawable/ic_key" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:text="@string/activate"
                    android:paddingStart="12dp"
                    android:drawableEnd="@drawable/ic_chevron_right" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
